--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ Global Styles
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
 }
 body {
   font-family: "Helvetica Neue", sans-serif;
