added homepage hero

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,9 @@ h5 {
 }
 h1 {
   font-size: 2.5rem;
+  font-weight: 300;
+  text-transform: capitalize;
+  letter-spacing: 10px;
 }
 h2 {
   font-size: 2rem;
