--- a/src/index.css
+++ b/src/index.css
@@ -181,7 +181,7 @@ article h2 {
   text-transform: uppercase;
   background: var(--clr-primary-5);
   color: var(--clr-primary-10);
-  padding: 0.375rem 0.75rem;
+  padding: 0.4rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
   font-weight: 400;
@@ -191,6 +191,7 @@ article h2 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   border-color: transparent;
+  text-align: center;
 }
 .btn:hover {
   color: var(--clr-primary-1);
